--- a/react_rest/src/components/criar-usuario/css/style.scss
+++ b/react_rest/src/components/criar-usuario/css/style.scss
@@ -1,15 +1,85 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    background-image: linear-gradient(
+        60deg,
+        rgb(46, 40, 102),
+        rgb(130, 99, 112)
+    );
+    background-size: auto;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .cadastro {
-    width: 500px;
-    text-align: center;
-    margin: auto;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 30px 10px;
-    margin-top: 150px;
-    box-shadow: 5px 5px 6px #ccc;
-    #btnSubmit {
-        margin: auto;
-        margin-top: 10px;
+    position: relative;
+    width: auto;
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    color: #fff;
+    padding: 30px 10px 5px 10px;
+    box-shadow: 5px 5px 6px #333;
+    background-image: linear-gradient(60deg, rgb(7, 9, 33), rgb(23, 29, 109));
+
+    .contentUser {
+        width: 300px;
+        padding: 0 20px 0 10px;
+
+        .userIcon {
+            position: absolute;
+            top: -25px;
+            background-color: rgb(23, 29, 109);
+            border-radius: 100%;
+            font-size: 3rem;
+            left: 45%;
+        }
+
+        h1 {
+            padding-left: 20px;
+        }
+    }
+
+    .contentInfo {
+        width: 500px;
+        padding: 0 20px 0 10px;
+
+        .infoIcon {
+            position: absolute;
+            top: -25px;
+            background-color: rgb(23, 29, 109);
+            border-radius: 100%;
+            font-size: 2.5rem;
+            padding: 5px;
+            left: 47%;
+        }
+
+        h1 {
+            padding-left: 20px;
+        }
+    }
+
+    input,
+    label,
+    div,
+    .css-1a1fmpi-MuiInputBase-root-MuiInput-root:before,
+    .css-1ptx2yq-MuiInputBase-root-MuiInput-root:before,
+    .css-78trlr-MuiButtonBase-root-MuiIconButton-root {
+        color: #fff;
+        border-color: #fff;
+    }
+    
+    .btnNext {
+        margin-top: 15px;
         width: 30%;
+        color: rgb(84, 167, 89);
+        padding: 0 0 10px 0;
+        display: flex;
+        justify-content: end;
     }
 }
