--- a/react_rest/src/components/criar-usuario/css/style.scss
+++ b/react_rest/src/components/criar-usuario/css/style.scss
@@ -46,7 +46,7 @@ body {
     }
 
     .contentInfo {
-        width: 500px;
+        width: 600px;
         padding: 0 20px 0 10px;
 
         .infoIcon {
@@ -54,13 +54,17 @@ body {
             top: -25px;
             background-color: rgb(23, 29, 109);
             border-radius: 100%;
-            font-size: 2.5rem;
-            padding: 5px;
+            font-size: 2.2rem;
+            padding: 7px;
             left: 47%;
         }
 
         h1 {
             padding-left: 20px;
+        }
+
+        .justify-content-space-between {
+            justify-content: space-between;
         }
     }
 
@@ -73,7 +77,7 @@ body {
         color: #fff;
         border-color: #fff;
     }
-    
+
     .btnNext {
         margin-top: 15px;
         width: 30%;
